# SinkShips

./: ASCII-GFX.cmake  CMakeLists.txt  COPYING  Doxyfile  README.md  linesofcode.sh  main.cpp  makezip.sh
CMakeModules/: FindSDL2.cmake  FindSDL2_mixer.cmake
gfx/: gfx.cpp  gfx.h  gridarea.cpp  gridarea.h  gridfont.cpp  gridfont.h  gridmenu.cpp  gridmenu.h  joystick.cpp  joystick.h  math2d.cpp  math2d.h  mouse.cpp  mouse.h  polygon.cpp  polygon.h  scrollarea.cpp  scrollarea.h  sound.cpp  sound.h  util.cpp  util.h
